Got rid of warning